components/deals/DealBanner.module.css
.banner {
  width: 182px;
  padding: 16px;
  background: #315577;
  color: var(--text-color-white);
  border-radius: var(--corner-radius) 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
  gap: 8px;
}

.prices {
  font-size: var(--font-size-heading);
  display: flex;
  justify-content: space-between;
  gap: 8px;
}

.normal-price {
  text-decoration: line-through;
}

.route {
  font-size: var(--font-size-caption);
  text-align: right;
}

